--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+1 MAY 2021
+- Refactored the codes in GPS::findChosenPath with the following sub-methods:
+  1. GPS::correctedDirection
+  2. GPS::schwartzianTransform
+- Added a route direction checking feature (only applicable for GPS::findChosenPath) due to the way paths are filtered
+
+
 29 APRIL 2021
 - Updated the followings:
   1. CityMap.java
