--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+18 MAY 2021
+- Modified the layout of the GUI a bit and added some more components
+- Added the logic ie. event listeners for most of the components (buttons, text field, list)
+
 17 MAY 2021
 - Overloaded GPS::findChosenPath. The original version is used to check ONLY the starting station and the destination station. 
   The newer version is used to look for the path that includes the extra stations in between.
