--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+21 MAY 2021
+- Added the benchmarking codes for CSP and COP
+
 20 MAY 2021
 - Added more stations and changed some colors
 - Tweaked the GUI a little bit
