--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+25 MAY 2021
+- Corrected the top left corner of the map a little bit, the CSP should work better by now
+
 21 MAY 2021
 - Added the benchmarking codes for CSP and COP
 
