--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+26 MAY 2021
+- Created the jar file assets v1.0.0
+
 25 MAY 2021
 - Corrected the top left corner of the map a little bit, the CSP should work better by now
 
